--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   provider: ^6.0.5
   http: ^1.2.0
   shared_preferences: ^2.2.2
-
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.4
 
   cupertino_icons: ^1.0.8
 
