--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   firebase_auth: ^4.17.4
 
   cupertino_icons: ^1.0.8
+  image_picker: ^1.2.1
+  geolocator: ^12.0.0
+  geocoding: ^4.0.0
+  firebase_storage: ^11.7.7
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
