--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   geocoding: ^4.0.0
   firebase_storage: ^11.7.7
   cloud_firestore: ^4.17.5
+  google_maps_flutter: ^2.14.0
 
 dev_dependencies:
   flutter_test:
